--- a/src/LBF/MainBundle/Resources/translations/messages.es.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.es.yml
@@ -9,7 +9,7 @@ header:
         register:               INSCRIPCIÓN
         aboutUs: 				A PROPUESTO
         ourProducts: 			PRODUCTOS
-        myCart: 				MIS ORDENES
+        myCart: 				MIS PEDIDOS
     special:
         buttonToTop: 			ARRIBA
 
@@ -40,7 +40,7 @@ ourProducts:
         title_ourProducts: 		Nuestros productos.
         title_ourProducts_s: 	A elegir con amor.
     actions: 
-        order: 					ORDENER
+        order: 					PEDIR
     details:
         weight:                 "Peso:"
         price:                  "Precio:"
@@ -54,9 +54,86 @@ ourProducts:
 # Alerts
 alert:
     title:
-        congratulations:        Felicitationes!
+        congratulations:        "Felicitationes !"
+        careful:                "Cuidado !"
     content: 
-        congratulations:        "El emento fue correctamente añadido a su carro de compra."
+        congratulations:        "El elemento fue correctamente añadido a su carro de compra."
+        pleaseRefresh:          "Refresque su carro de compra por favor."
+        elementDeleted:         "Elemento barrado."
+        cartEmptied:            "Carro de compra completamente vacío."
+        noChangeMade:           "Ningún cambio."
+
+
+# Cart
+cart:
+    titles:
+        content:                Contenido
+        order:                  Pedir
+        confirm:                Confirmación
+        total:                  "TOTAL :"
+        thankYou:               "Gracias por su pedido. Usted debería recibir un email de confirmación rapidamente."
+    tableTitles:
+        item:                   Artículo
+        quantity:               Quantitad
+        weight:                 Peso
+        price:                  Precio
+        action:                 Acción
+    actions:
+        emptyCart:              Vaciar el carro
+        refreshCart:            Refrescar el carro
+        continueShopping:       "Seguir mis compras ..."
+        delete:                 Borrar
+        previous:               Atrás
+    actionTitles:
+        deleteElement:          Borrar el artículo
+    errors:
+        nothingHere:            "Lo siento, su carro de compra esta vacío ..."
+    orderContent:
+        dear:                   Querido
+        finalize:               "Usted esta finalizando su pedido de :"
+        ofaTotal:               "TOTAL : "
+        requisites:             "Apunta usted por favor que esto solamente es un pre-pedido que :"
+        conditions1:            "Los gerentes tienen que validar para que su pedido sea confirmado."
+        conditions2:            "Una vez que su pedido esta listo, usted tendra que pasar pagar y conseguir su pedido a la dirección siguiente :"
+        shopOpen:               "La tienda esta abierta desde las 10 hasta las 19, del Lúnes al Sabado."
+        minimumOpen:            "El minimum de preparación de su pedido es 2 horas, pero si quiere, usted puede cambiar la fecha que más le conviene :"
+
+
+# Email summary
+emailSummary:
+    notes: 
+        topSentence:            "Esto es un mensaje de "
+    titles:
+        general:                Nuevo pedido pendiente de validación
+        thankYouForYourOrder:   GRACIAS POR SU PEDIDO
+        orderContent:           CONTENIDO DEL PEDIDO
+    content:
+        summaryEmailRegarding:  "Esto es un recapitulativo de su pedido realizado sobre "
+        orderIs:                "Su pedido esta grabado, y "
+        onHold:                 "pendiente"
+        shouldReceive:          "de estar validado por uno de los gerentes para que se prepare. Usted debería recebir un email de confirmación cuando le estamos preparando su pedido."
+        thankYouAgain:          "Gracias de nuevo por su pedido de los artículos siguientes :"
+        shouldReceiveShortly:   "Usted debería recebir un email rapidament, cuando uno de los gerentes haya validado su pedido."
+    tableTitles:
+        item:                   Artículo
+        quantity:               Quantitad
+        weight:                 Peso
+        price:                  Precio
+        total:                  "TOTAL : "
+    actions:
+        accessProfile:          Acceder a su perfil
+    errors:
+        nothingHere:            "Lo siento, su pedido esta vacío..."
+        please:                 "Por favor,"
+        contactAdministration:  "contacte la administración"
+    footer:
+        anecdote:               "es una nueva tienda de charcuteria en Cusco, que viende productos de carne local, pero cortada y cocinada según los metodos y tecnicas francéses. La start-up ha abierta el 1ero de Marso de 2015 en Perú, con su primera fabrica. Otras seguiron."
+        keepInTouch:            "Mantener el contacto : "
+        ifWantToJoin:           "Si alguien le ha mandado este email y usted quiere sumarse a la lista de distribución de las newsletters, usted puede añadir su email "
+        here:                   "aquí"
+        quitSubscription:       "Usted recibe este email siguiendo o un pedido sobre nuestro sitio web, o su abono a nuestras newsletters. Para deshuesarse de la newsletter, por favor haga "
+        clickHere:              clic aquí
+
 
 # About us
 
