--- a/src/LBF/MainBundle/Resources/translations/messages.fr.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.fr.yml
@@ -54,9 +54,83 @@ ourProducts:
 # Alerts
 alert:
     title:
-        congratulations:        Félicitations !
+        congratulations:        "Félicitations !"
+        careful:                "Attention !"
     content: 
         congratulations:        "Cet élément a bien été ajouté à votre panier."
+        pleaseRefresh:          "Rafraichissez votre panier s'il vous plait."
+        elementDeleted:         "Elément supprimé."
+        cartEmptied:            "Le panier a bien été vidé."
+        noChangeMade:           "Aucune modification n'a été apportée."
+
+# Cart
+cart:
+    titles:
+        content:                Contenu
+        order:                  Commande
+        confirm:                Confirmation
+        total:                  "TOTAL : "
+        thankYou:               "Merci pour votre pré-commande. Vous devriez recevoir une email récapitulatif sous peu."
+    tableTitles:
+        item:                   Elément
+        quantity:               Quantité
+        weight:                 Poids
+        price:                  Prix
+        action:                 Action
+    actions:
+        emptyCart:              Vider le panier
+        refreshCart:            Rafraîchir le panier
+        continueShopping:       "Continuer mes achats ..."
+        delete:                 Supprimer
+        previous:               Précédent
+    actionTitles:
+        deleteElement:          "Supprimer l'article"
+    errors:
+        nothingHere:            "Désolé, votre panier est vide ..."
+    orderContent:
+        dear:                   Cher
+        finalize:               "Vous êtes sur le point de finaliser votre commande de :"
+        ofaTotal:               "TOTAL : "
+        requisites:             "Veuillez noter que ceci n'est qu'une pré-commande que :"
+        conditions1:            "Les gérants doivent d'abord valider pour que votre commande soit confirmée."
+        conditions2:            "Une fois que la commande est validée et prête, vous devrez passer la régler et la récupérer à l'adresse suivante :"
+        shopOpen:               "Le magasin est ouvert de 10h à 19h, de Lundi à Samedi."
+        minimumOpen:            "Le minimum de préparation de votre commande est de 2 heures, mais vous pouvez choisir l'horaire qui vous convient :"
+
+# Email summary
+emailSummary:
+    notes: 
+        topSentence:            "Ceci est un message de "
+    titles:
+        general:                Nouvelle commande en attente de validation
+        thankYouForYourOrder:   MERCI POUR VOTRE COMMANDE
+        orderContent:           CONTENU DE LA COMMANDE
+    content:
+        summaryEmailRegarding:  "Ceci est un récapitulatif de votre commande effectuée sur "
+        orderIs:                "Votre commande est enregistrée, et "
+        onHold:                 "en attente"
+        shouldReceive:          "d'être validée par un des gérants, pour être préparée. Vous devriez recevoir très rapidement un email de confirmation une fois que votre commande est prise en compte."
+        thankYouAgain:          "Encore merci d'avoir choisi les élements suivants :"
+        shouldReceiveShortly:   "Vous devirez recevoir un email d'ici peu, une fois qu'un des gérants aura confirmé votre commande."
+    tableTitles:
+        item:                   Elément
+        quantity:               Quantité
+        weight:                 Poids
+        price:                  Prix
+        total:                  "TOTAL:"
+    actions:
+        accessProfile:          Accéder à mon profil
+    errors:
+        nothingHere:            "Désolé, votre commande est vide ..."
+        please:                 "S'il vous plaît,"
+        contactAdministration:  "contactez l'administration"
+    footer:
+        anecdote:               "est un nouveau magasin de charcuterie à Cusco, qui vend des produits faits avec la viande locale mais coupée et cuisinée selon les méthodes et techniques françaises. La start-up a ouvert le 1er Mars 2015 au Perou, avec leur premier atelier. D'autres suivront."
+        keepInTouch:            "Se tenir au courant : "
+        ifWantToJoin:           "Si quelqu'un vous a envoyé cette email et vous voudriez vous joindre au listing des newsletter, vous pouvez ajouter votre email "
+        here:                   "ici"
+        quitSubscription:       "Vous recevez cet email, soit suite à une commande sur notre site, soit votre abonnement à notre newsletter. Pour vous désabonner de la newsletter, veuillez "
+        clickHere:              cliquer ici
 
 # About us
 
