--- a/src/LBF/UserBundle/Resources/translations/messages.es.yml
+++ b/src/LBF/UserBundle/Resources/translations/messages.es.yml
@@ -39,36 +39,36 @@ user:
 # Register and forgotten password
 registerUser:
     titles:
-        signUp:             Sign Up
-        enterDetails:       Enter your details below:
-        username:           Username
-        password:           Password
-        rePassword:         Re-Type your password
+        signUp:             Registración
+        enterDetails:       Escribir sus informaciones abajo:
+        username:           Nombre de usuario
+        password:           Contraseña
+        rePassword:         Reescribir su contraseña
         email:              Email
-        iAgreeToThe:        I agree to the
-        TermsOfService:     Terms of Service
-        and:                and
-        PrivacyPolicy:      Privacy Policy
+        iAgreeToThe:        Estoy de acuerdo con las 
+        TermsOfService:     Condiciones de uso
+        and:                y la
+        PrivacyPolicy:      Política de confidencialidad
     actions: 
-        back:               Back
-        signUp:             SIGN UP
+        back:               Atrás
+        signUp:             REGISTRACIÓN
 forgotPassword:
     titles:
-        forgotPassword:     Forgot your Password?
-        enterEmail:         "Enter your e-mail address below to reset your password."
+        forgotPassword:     "¿Olvidaste tu contraseña?"
+        enterEmail:         "Escribir su email para reinicializar su contraseña."
         email:              Email
     actions:
-        back:               Back
-        submit:             Submit
+        back:               Atrás
+        submit:             Someter
 resetPassword:
     titles:
-        resetPassword:      Reset your Password?
-        enterOld:           Current password
-        enterNew:           New password
-        reEnterNew:         Re-Type new password
+        resetPassword:      "¿Reinicializar su contraseña?"
+        enterOld:           Contraseña actual
+        enterNew:           Nuvea contraseña
+        reEnterNew:         Reescribir su contraseña
     actions:
-        back:               Back
-        changePassword:     Change password
+        back:               Atrás
+        changePassword:     Cambiar de contraseña
 check:
     titles: 
         welcome:            "Thank you for joining us. Please check your emails to confirm your email before using the website."
@@ -89,25 +89,18 @@ check:
 # Login
 login:
     titles:
-        loginTitle:     Login to your account
-        enterUsernameAndPassword:   Enter a username and a password. 
-        username:       Username
+        loginTitle:     Iniciar sesión
+        or:             "- o -"
+        enterUsernameAndPassword:   Escribe su email y su contraseña. 
+        username:       Nombre de usario
         email:          Email
-        password:       Password
-        orLoginWith:    Or login with
-        forgetPassword: Forgot your password?
-        noWorriesClick: "no worries, click"
-        here:           here
-        toResetPassword: to reset your password.
-        noAccount:      "Don't have an account yet?"
+        password:       Contraseña
+        forgetPassword: "¿Olvidaste tu contraseña?"
     actions:
-        login:          LOGIN
-        remember_me:    Remember me
-        createAccount:  Create an account
+        login:          INITIAR SESIÓN
+        remember_me:    No cerrar sesión
+        createAccount:  Abrir su cuenta
+        back:           Atrás
     connected:
-        titleAlreadyConnected:  "You're already connected"
-        accessAccount:  Access your account
-    comments:
-        anyComments:    Any comments about SWYCA you would like to share?
-        feelFreeTo:     Feel free to 
-        tellUs:         tell us
+        titleAlreadyConnected:  "Usted ya esta conectado"
+        accessAccount:  Acceder su cuenta
