translation and login form

--- a/src/LBF/UserBundle/Resources/translations/messages.en.yml
+++ b/src/LBF/UserBundle/Resources/translations/messages.en.yml
@@ -108,3 +108,43 @@ login:
     connected:
         titleAlreadyConnected:  "You're already connected"
         accessAccount:  Access your account
+
+
+
+# Email summary
+emailSummary:
+    notes: 
+        topSentence:            "This is a letter from "
+    titles:
+        general:                New order on hold
+        thankYouForYourOrder:   THANK YOU FOR YOUR ORDER
+        orderContent:           ORDER CONTENT
+    content:
+        summaryEmailRegarding:  "This is a summary email regarding your recent order on "
+        orderIs:                "Your order is saved, and is"
+        onHold:                 "on hold"
+        shouldReceive:          "waiting to be validated by a Manager for your order to be processed. You should receive a confirmation email once your order is taken into account, very shortly."
+        thankYouAgain:          "Thank you again for ordering the following elements:"
+        shouldReceiveShortly:   "You should a receive an email shortly once the Managers have confirmed your order."
+        delivery:               "Please note that you asked the order to be ready for the "
+        at:                     " at "
+    tableTitles:
+        item:                   Item
+        quantity:               Quantity
+        weight:                 Weight
+        price:                  Price
+        total:                  "TOTAL: "
+    actions:
+        accessProfile:          Access my profile
+    errors:
+        nothingHere:            "Sorry, nothing here for now..."
+        please:                 Please
+        contactAdministration:  "contact the administration"
+    footer:
+        anecdote:               "is new shop in Cusco, selling Delicatessens made out of local meat but cut and cooked according to French techniques. The start-up opened March 1st, 2015 in Perú, with their first shop. More are on the way."
+        keepInTouch:            "Keep in touch: "
+        ifWantToJoin:           "If someone sent you this email and you'd like to join our mailing list, you can sign up "
+        here:                   "here"
+        quitSubscription:       "You're receiving cet email following either a new order made on the website, or the fact you're in the mailing list for the newsletter. If you would like to unsubscribe from our newsletters, please "
+        clickHere:              click here
+
