--- a/src/LBF/MainBundle/Resources/translations/messages.en.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.en.yml
@@ -17,7 +17,7 @@ header:
 
 main:
     titles:
-        title_meat: 			Meat the way we love it.
+        title_meat: 			New flavors son your table.
         title_meat_s: 			Three clicks away. 
         variatyOfChoice: 		Variaty of choices
         qualityProduct: 		Quality products
