--- a/src/LBF/MainBundle/Resources/translations/messages.es.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.es.yml
@@ -17,7 +17,7 @@ header:
 
 main:
     titles:
-        title_meat: 			La carne como la queremos.
+        title_meat: 			Nuevos sabores sobre tu mesa.
         title_meat_s: 			En tres clicks.
         variatyOfChoice: 		Variedad de juicio
         qualityProduct: 		Qualitad de producto
