--- a/src/LBF/MainBundle/Resources/translations/messages.fr.yml
+++ b/src/LBF/MainBundle/Resources/translations/messages.fr.yml
@@ -17,7 +17,7 @@ header:
 
 main:
     titles:
-        title_meat: 			La viande comme on l'aime. 
+        title_meat: 			De nouvelles saveurs sur votre table.
         title_meat_s: 			En trois clics. 
         variatyOfChoice: 		Variété de choix
         qualityProduct: 		Produit de qualité
